--- a/jvm-packages/xgboost4j/pom.xml
+++ b/jvm-packages/xgboost4j/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ml.dmlc</groupId>
+        <groupId>pl.roqad</groupId>
         <artifactId>xgboost-jvm</artifactId>
         <version>0.7</version>
     </parent>
